[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/GUI/lifebar_bg.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/CCOverbyteOn W00 Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/GUI/label_HP.png" type="Texture" id=3]
[ext_resource path="res://assets/GUI/label_bg.png" type="Texture" id=4]
[ext_resource path="res://assets/GUI/lifebar_fill.png" type="Texture" id=5]
[ext_resource path="res://scripts/GUI/HP bar.gd" type="Script" id=6]
[ext_resource path="res://assets/GUI/lifebar_fill_white.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="HP bar" type="HBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -142.0
margin_top = -20.0
margin_right = 142.0
margin_bottom = 20.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="MarginContainer" parent="."]
margin_right = 80.0
margin_bottom = 40.0

[node name="Background" type="NinePatchRect" parent="Count"]
margin_right = 80.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 40 )
texture = ExtResource( 4 )

[node name="Title" type="TextureRect" parent="Count/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -37.0
texture = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="Count/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 42.0
margin_right = -5.0
custom_fonts/font = SubResource( 1 )
text = "100"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count2" type="MarginContainer" parent="."]
margin_left = 84.0
margin_right = 284.0
margin_bottom = 40.0

[node name="NinePatchRect" type="NinePatchRect" parent="Count2"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )

[node name="Progress_bar" type="TextureProgress" parent="Count2/NinePatchRect"]
margin_right = 200.0
margin_bottom = 40.0
value = 100.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 7 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Progress_bar2" type="TextureProgress" parent="Count2/NinePatchRect"]
margin_right = 200.0
margin_bottom = 40.0
value = 100.0
texture_progress = ExtResource( 5 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
